Adapt messages to MiniMessage and remove message centering option